erDiagram
    Roles ||--o{ Usuarios : "clasifica"
    EstadosCuenta ||--o{ Usuarios : "estado"
    Usuarios ||--o| PerfilCliente : "es (CLIENTE)"
    Usuarios ||--o| PerfilOperador : "es (OPERADOR)"
    Usuarios ||--o| PerfilEmpresa : "es (EMPRESA)"
    Generos ||--o{ PerfilOperador : "género"
    Zonas ||--o{ PerfilOperador : "zona de operación"
    EstadosSolicitud ||--o{ PerfilOperador : "registro"
    EstadosSolicitud ||--o{ PerfilEmpresa : "registro"

    Usuarios ||--o{ ServiciosEnvio : "ofrece (operador)"
    Zonas ||--o{ ServiciosEnvio : "cobertura"
    ServiciosEnvio ||--o{ FotosServicio : "tiene (cascade)"
    Usuarios ||--o{ Rutas : "ofrece (empresa)"
    Zonas ||--o{ Rutas : "origen/destino"
    Usuarios ||--o{ Flota : "registra (empresa)"

    Usuarios ||--o{ ItemsCarrito : "agrega (cliente)"
    ServiciosEnvio |o--o{ ItemsCarrito : "envío"
    Rutas |o--o{ ItemsCarrito : "transporte"
    Usuarios ||--o{ Reservaciones : "realiza (cliente)"
    ServiciosEnvio |o--o{ Reservaciones : "envío"
    Rutas |o--o{ Reservaciones : "transporte"
    EstadosReserva ||--o{ Reservaciones : "estado"
    Usuarios ||--o{ Tarjetas : "registra (cliente)"
    Reservaciones ||--o{ Pagos : "genera"
    Tarjetas ||--o{ Pagos : "se usa en"
    EstadosPago ||--o{ Pagos : "estado"

    Reservaciones ||--o| Calificaciones : "puede recibir"
    Usuarios ||--o{ Calificaciones : "emite (cliente)"
    Usuarios ||--o{ Cupones : "emite (operador/empresa)"
    Cupones ||--o{ CuponesCanjeados : "se canjea"
    Usuarios ||--o{ CuponesCanjeados : "canjea (cliente)"
    Reservaciones |o--o{ CuponesCanjeados : "aplica a"

    Usuarios ||--o{ Reportes : "reporta (reportante)"
    Usuarios ||--o{ Reportes : "es reportado"
    Reservaciones |o--o{ Reportes : "se reporta"
    EstadosReporte ||--o{ Reportes : "estado"
    Reportes ||--o{ EvidenciasReporte : "adjunta (cascade)"
    Reportes ||--o| Sanciones : "puede derivar en"
    Usuarios ||--o{ Sanciones : "sancionado / admin"

    Usuarios ||--o{ Tokens : "genera"
    Usuarios ||--o{ SolicitudesCambioPerfil : "solicita"
    EstadosSolicitud ||--o{ SolicitudesCambioPerfil : "estado"
    Usuarios ||--o{ ReunionesVirtuales : "empresa/admin"
    Usuarios ||--o{ Notificaciones : "recibe"
    Usuarios ||--o{ LogActividad : "genera"
